--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let course of courses$ | async">
-  <h3>{{course.name}}</h3>
-</div>
+<h1>Courses</h1>
+
+<app-table-view [courses]="courses$ | async"></app-table-view>
