--- a/src/app/components/action-form/action-form.component.html
+++ b/src/app/components/action-form/action-form.component.html
@@ -3,7 +3,7 @@
   <div>
     <label>Name*</label>
     <br/>
-    <input formControlName="name" type="text"/>
+    <input [formControl]="nameControl" type="text"/>
   </div>
 
   <br/>
